# tomahawk-plugin-equalizer

./: AudioEngine.patch  CMakeLists.txt  EqEffect.cpp  EqEffect.h  EqPlugin.cpp  EqPlugin.h  EqWidget.cpp  EqWidget.h  GraphicEq.cpp  GraphicEq.h  README.md  equalizer.ui  fft3.c  resources.qrc
